--- a/branches/dev-1_4/.classpath
+++ b/branches/dev-1_4/.classpath
@@ -4,5 +4,5 @@
 	<classpathentry excluding="**/.svn/" kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
