--- a/branches/dev-1_4/ArkhamCalc/AndroidManifest.xml
+++ b/branches/dev-1_4/ArkhamCalc/AndroidManifest.xml
@@ -10,6 +10,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ArkhamCalcHelp">
+            <intent-filter>
+                <action android:name="android.intent.action.ARKHAMCALCHELP"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
 
     </application>
 
