--- a/ArkhamCalc/AndroidManifest.xml
+++ b/ArkhamCalc/AndroidManifest.xml
@@ -10,7 +10,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ArkhamCalcHelp">
+        <activity android:name=".ArkhamCalcHelp" android:label="@string/arkhamcalchelp_label">
             <intent-filter>
                 <action android:name="android.intent.action.ARKHAMCALCHELP"/>
                 <category android:name="android.intent.category.DEFAULT"/>
